[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gridlab"
description = "Causal inference in text-based grid games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "colorist",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "gridlab.__version__"}

[tool.setuptools]
packages = ["gridlab"]
